# st-ansible

./: .ansible-lint  .gitignore  .markdownlint.json  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  galaxy.yml  requirements.txt
.github/actions/vagrant-setup/: action.yml
.github/workflows/: ci.yml
changelogs/: config.yaml
docs/: 06-monitoring.md  07-backup.md  08-troubleshooting.md
docs/00-examples/full-high-availability/: README.md  galaxy-requirements.yml  hosts  playbook_drive.yml  (+10 more)
docs/01-fundamentals/: 01-architecture.md  02-deployment.md  03-upgrade.md  04-podman-role.md
docs/02-messages/: 01-messages.md  02-workers.md  03-mta-in.md  04-socks-proxy.md  05-mpa.md
docs/03-drive/: 01-drive.md  02-workers.md  03-collabora.md
docs/04-keycloak/: 01-keycloak.md
docs/05-meet/: 01-meet.md  02-livekit.md
examples/monitoring/: messages.config.alloy.j2
extensions/lima-driver/: .gitignore  README.md  pyproject.toml
extensions/lima-driver/src/molecule_lima/: __init__.py  driver.py
extensions/lima-driver/src/molecule_lima/playbooks/: create.yml  create_instance.yml  destroy.yml  prepare.yml
extensions/lima-driver/src/molecule_lima/playbooks/tasks/: create_instance.yml  validate_instance.yml
extensions/molecule/: .env.molecule  config.yml
playbooks/: valkey_failover.yml  valkey_getprimary.yml  valkey_init.yml
roles/alloy/: REFERENCE.md
roles/drive/: REFERENCE.md
roles/keycloak/: REFERENCE.md
roles/meet/: REFERENCE.md
roles/messages/: REFERENCE.md
roles/podman/: REFERENCE.md
roles/restic/: REFERENCE.md
roles/valkey/: REFERENCE.md
(+203 files in other folders)
